--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.8"
 services:
-  db:
+  db-dev:
     image: mysql:8.0
     restart: always
     container_name: mysql_med_api
@@ -11,6 +11,16 @@ services:
       - MYSQL_ROOT_PASSWORD=root
     volumes:
       - .docker/mysql-data:/var/lib/mysql
+
+  db-test:
+    image: mysql:8.0
+    container_name: mysql_med_test
+    ports:
+      - "3307:3306"
+    environment:
+      - MYSQL_DATABASE=vollmed_test
+      - MYSQL_ROOT_PASSWORD=root
+
 
 volumes:
   mysql-data:
