--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,18 @@ spring.datasource.username=${MYSQL_ROOT_USER}
 spring.datasource.password=${MYSQL_ROOT_PASSWORD}
 
 # Datasource connection
-spring.sql.init.platform=mysql
-spring.sql.init.mode=always
+#spring.sql.init.platform=mysql
+#spring.sql.init.mode=always
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+
 
 
 # Logs Errors
-server.error.include-stacktrace=never
+#server.error.include-stacktrace=never
 
 # Token JWT
 api.security.token.secret=${JWT_VOLLMED_SECRET_KEY}
