--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,9 @@ services:
     image: mysql:8.0
     container_name: mysql_med_test
     ports:
-      - "3307:3306"
+      - "33060:3306"
     environment:
-      - MYSQL_DATABASE=vollmed_test
+      - MYSQL_DATABASE=vollmed
       - MYSQL_ROOT_PASSWORD=root
 
 
