--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/vollmed_test
+spring.datasource.url=jdbc:mysql://localhost:33060/vollmed?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+api.security.token.secret=lLFU45FSU8IR41X7sm5uri59PxD8jCwM
